[package]
name = "garbage_man"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
glob = "0.3.1"
rusqlite = "0.32.1"
sea-query = "0.32.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tabled = "0.17.0"
tokio = { version = "1.42.0", features = ["full"] }
walkdir = "2"
